servicenow/6.5/modules/ROOT/pages/servicenow-connector-xml-maven.adoc
= ServiceNow XML and Maven Support - Mule 4

If you manually code a Mule app in XML (either from the Anypoint Studio XML editor or from a text editor), you can access ServiceNow Connector in your app by adding reference statements both to your XML Mule flow and in the Apache Maven `pom.xml` file.

[NOTE]
====
You can avoid this manual process by using Studio. When you install the connector in Anypoint Studio, Studio automatically populates the XML code with the connector's namespace and schema location, and adds a dependency to the POM file.
====

== Add a Namespace for the Connector

Paste the following code inside the `mule` tag of the header of your configuration XML:

[source,xml,linenums]
----
http://www.mulesoft.org/schema/mule/servicenow
http://www.mulesoft.org/schema/mule/servicenow/current/mule-servicenow.xsd
----

This example shows how the namespace statements are placed in the XML:

[source,xml,linenums]
----
<mule xmlns:http="http://www.mulesoft.org/schema/mule/http"
	xmlns:servicenow="http://www.mulesoft.org/schema/mule/servicenow"
	xmlns="http://www.mulesoft.org/schema/mule/core"
	xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://www.mulesoft.org/schema/mule/core
	http://www.mulesoft.org/schema/mule/core/current/mule.xsd
	http://www.mulesoft.org/schema/mule/servicenow
	http://www.mulesoft.org/schema/mule/servicenow/current/mule-servicenow.xsd
	http://www.mulesoft.org/schema/mule/http
	http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd">
</mule>
----

== Add a POM File Dependency

The `pom.xml` Apache Maven file generated by Anypoint Studio contains dependencies for a Mule app. When you code a Mule app manually, include this XML snippet in your POM file to enable access to this connector:

[source,xml,linenums]
----
<dependency>
  <groupId>com.mulesoft.connectors</groupId>
  <artifactId>mule-servicenow-connector</artifactId>
  <version>x.x.x</version>
  <classifier>mule-plugin</classifier>
</dependency>
----

Ensure that the connector `<version>` corresponds to the one you are using.

To obtain the most up-to-date pom.xml file information, access the
connector in https://www.mulesoft.com/exchange/[Anypoint Exchange]
and click *Dependency Snippets*.

== Next Step

After completing your namespace and `pom.xml` file, you can try
the xref:servicenow-connector-examples.adoc[Examples].

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
